2007-08-01 15:44  Douglas Bates <bates@stat.wisc.edu>

	* [r4686] inst/include/Matrix.h, inst/include/Matrix_stubs.c,
	  src/chm_common.c, src/chm_common.h: Change API for
	  numeric_as_chm_dense and N_AS_CHM_DN
	
2007-08-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/dtrMatrix.c (dtrMatrix_matrix_mm): fix dimensionality check (!)
	* tests/matprod.R: regr.test for it

2007-07-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dMatrix.R: fix from Brian for   Math2(., digits = "missing")
	* tests/group-methods.R: and regression-test it

2007-07-19 19:45  Douglas Bates <bates@stat.wisc.edu>

	* [r4642] inst/include/Matrix.h, inst/include/Matrix_stubs.c,
	  inst/include/cholmod.h, src/chm_common.c, src/init.c: Export
	  triplet_to_sparse, documentation, use typedefs

2007-07-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/dpoMatrix-class.Rd: added 'corMatrix' example

	* src/dsyMatrix.[ch] (dsyMatrix_as_matrix): new 'keep_dimnames' arg
	* src/dtrMatrix.[ch] (dtrMatrix_as_matrix): ditto
	* src/init.c, R/dsyMatrix.R, R/dtrMatrix.R, R/lgTMatrix.R: ditto

	* R/lsparseMatrix.R: bug fix in "all" method
	* R/Ops.R (.do.Logic.lsparse): "|" bug in borderline case

	* R/dsyMatrix.R (coerce->dsTMatrix): (i,j) slots should *not* have names
	* R/ngTMatrix.R (coerce->ngTMatrix): ditto;
		+ matrix |-> nMatrix coercion
	* R/pMatrix.R: + setAs()  to dMatrix and from nMatrix
	* man/pMatrix-class.Rd: ditto

	* R/Matrix.R (Summary): method for non-dMatrix

	* tests/Class+Meth.R (extraValid): new check about "dirty" slots
	* tests/Class+Meth.R (tstMatrixClass): test norm(.);
		test all Summary methods.

2007-07-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dgeMatrix.R (norm, rcond): methods for 'matrix'

2007-07-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (norm): simple methods for sparseMatrix

	* R/pMatrix.R (t?crossprod): methods for pMatrix

2007-07-10  Douglas Bates  <bates@stat.wisc.edu>
