@@ -81,8 +81,8 @@ for(fname in intersect(getGroupMembers("Math2"),
 
 
 ## "Summary"
-if(!is.primitive(max)) {
-    ## --- some hoop jumping that is needed for R versions <= 2.5.x
+if(!is.primitive(max)) { ## or another R 2.6.0 solution
+    ## --- some hoop jumping that is needed at least for R versions <= 2.5.x
 
 .max_def <- function(x, ..., na.rm = FALSE) base::max(x, ..., na.rm = na.rm)
 .min_def <- function(x, ..., na.rm = FALSE) base::min(x, ..., na.rm = na.rm)
@@ -107,8 +107,8 @@ setGeneric("any", function(x, ..., na.rm = FALSE) standardGeneric("any"),
 setGeneric("all", function(x, ..., na.rm = FALSE) standardGeneric("all"),
            useAsDefault = .all_def, group="Summary")
 
-
 } # end{hoop jumping}
+
 
 ## Add '...' so our methods can add  'sparseResult':
 setGeneric("colSums",
